--- a/model-viewer.html
+++ b/model-viewer.html
@@ -48,9 +48,11 @@
       -->
     </model-viewer>
     <div id="buttonsGRP">
+      <!--
       <a href="newMenu.html">
         <img class="return" src="icon/returnbtn.png" alt="return">
       </a>
+      -->
 
       <!-- Botão especificações -->
       <img class="specification" src="icon/infobtn.png" alt="specification" id="specButton">  
@@ -261,73 +263,78 @@
           const center = modelViewer.getBoundingBoxCenter();
           const size = modelViewer.getDimensions();
 
-          const x2 = size.x / 2;
-          const y2 = size.y / 2;
-          const z2 = size.z / 2;
+          const x2 = size.x / 2 ;
+          const y2 = size.y / 2 ;
+          const z2 = size.z / 2 ;
+          
+          const offsetx = 0;
+          const offsety = 0;
+          const offsetz = 0;
+          
 
        modelViewer.updateHotspot({
          name: 'hotspot-dot+X-Y+Z',
-         position: `${center.x + x2} ${center.y - y2} ${center.z + z2}`
+         position: `${center.x-offsetx + x2} ${center.y-offsety - y2} ${(center.z+offsetz) + z2}`
        });
 
        modelViewer.updateHotspot({
          name: 'hotspot-dim+X-Y',
-         position: `${center.x + x2 * 1.2} ${center.y - y2 * 1.1} ${center.z}`
+         position: `${center.x-offsetx + x2 * 1.2} ${center.y-offsety - y2 * 1.1} ${(center.z+offsetz)}`
        });
        modelViewer.querySelector('button[slot="hotspot-dim+X-Y"]').textContent =
          `${(size.z * 100).toFixed(0)} cm`;
 
        modelViewer.updateHotspot({
          name: 'hotspot-dot+X-Y-Z',
-         position: `${center.x + x2} ${center.y - y2} ${center.z - z2}`
+         position: `${center.x-offsetx + x2} ${center.y-offsety - y2} ${(center.z+offsetz) - z2}`
        });
 
         modelViewer.updateHotspot({
           name: 'hotspot-dim+X-Z',
-          position: `${center.x + x2 * 1.2} ${center.y} ${center.z - z2 * 1.2}`
+          position: `${center.x-offsetx + x2 * 1.2} ${center.y-offsety} ${(center.z+offsetz) - z2 * 1.2}`
         });
         modelViewer.querySelector('button[slot="hotspot-dim+X-Z"]').textContent =
           `${(size.y * 100).toFixed(0)} cm`;
 
         modelViewer.updateHotspot({
           name: 'hotspot-dot+X+Y-Z',
-          position: `${center.x + x2} ${center.y + y2} ${center.z - z2}`
+          position: `${center.x-offsetx + x2} ${center.y-offsety + y2} ${(center.z+offsetz) - z2}`
         });
 
         modelViewer.updateHotspot({
           name: 'hotspot-dim+Y-Z',
-          position: `${center.x} ${center.y + y2 * 1.1} ${center.z - z2 * 1.1}`
+          position: `${center.x-offsetx} ${center.y-offsety + y2 * 1.1} ${(center.z+offsetz) - z2 * 1.1}`
         });
         modelViewer.querySelector('button[slot="hotspot-dim+Y-Z"]').textContent =
           `${(size.x * 100).toFixed(0)} cm`;
 
         modelViewer.updateHotspot({
           name: 'hotspot-dot-X+Y-Z',
-          position: `${center.x - x2} ${center.y + y2} ${center.z - z2}`
+          position: `${center.x-offsetx - x2} ${center.y-offsety + y2} ${(center.z+offsetz) - z2}`
         });
 
         modelViewer.updateHotspot({
           name: 'hotspot-dim-X-Z',
-          position: `${center.x - x2 * 1.2} ${center.y} ${center.z - z2 * 1.2}`
+          position: `${center.x-offsetx - x2 * 1.2} ${center.y-offsety} ${(center.z+offsetz) - z2 * 1.2}`
         });
         modelViewer.querySelector('button[slot="hotspot-dim-X-Z"]').textContent =
           `${(size.y * 100).toFixed(0)} cm`;
 
         modelViewer.updateHotspot({
           name: 'hotspot-dot-X-Y-Z',
-          position: `${center.x - x2} ${center.y - y2} ${center.z - z2}`
+          position: `${center.x-offsetx - x2} ${center.y-offsety - y2} ${(center.z+offsetz) - z2}`
         });
 
         modelViewer.updateHotspot({
           name: 'hotspot-dim-X-Y',
-          position: `${center.x - x2 * 1.2} ${center.y - y2 * 1.1} ${center.z}`
+          position: `${center.x-offsetx - x2 * 1.2} ${center.y-offsety - y2 * 1.1} ${(center.z+offsetz)}`
         });
         modelViewer.querySelector('button[slot="hotspot-dim-X-Y"]').textContent =
           `${(size.z * 100).toFixed(0)} cm`;
 
         modelViewer.updateHotspot({
           name: 'hotspot-dot-X-Y+Z',
-          position: `${center.x - x2} ${center.y - y2} ${center.z + z2}`
+          position: `${center.x-offsetx - x2} ${center.y-offsety - y2} ${(center.z+offsetz) + z2}`
         });
 
         renderSVG();
